# codesearch-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  sparse_set.rs
src/index/: merge.rs  mod.rs  read.rs  regexp.rs  write.rs
