[package]
name = "rust-codesearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
memmap2 = "0.9.9"
regex = "1.12.2"
regex-syntax = "0.8.8"
tempfile = "3.24.0"
thiserror = "2.0.17"
walkdir = "2.5.0"
